// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorListStatusColumn can handle a non-numeric timestamp value 1`] = `
<div>
  <Styled(EuiFlexGroup)
    alignItems="center"
    gutterSize="none"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      grow={false}
      style={
        Object {
          "flexBasis": 40,
        }
      }
    >
      <EuiBadge
        color="secondary"
        style={
          Object {
            "display": "block",
          }
        }
      >
        Up
      </EuiBadge>
    </EuiFlexItem>
    <EuiFlexItem>
      <styled.span>
        <EuiToolTip
          content={
            <EuiText
              color="ghost"
              size="xs"
            >
              Thu May 09 2019 10:15:11 GMT-0400
            </EuiText>
          }
          delay="regular"
          position="top"
        >
          <EuiText
            className="eui-textNoWrap"
            color="subdued"
            size="xs"
          >
            a few seconds ago
          </EuiText>
        </EuiToolTip>
      </styled.span>
    </EuiFlexItem>
  </Styled(EuiFlexGroup)>
  <EuiSpacer
    size="xs"
  />
  <EuiText
    size="xs"
  >
    in 0/0 Location
  </EuiText>
</div>
`;

exports[`MonitorListStatusColumn provides expected tooltip and display times 1`] = `
<div>
  <Styled(EuiFlexGroup)
    alignItems="center"
    gutterSize="none"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      grow={false}
      style={
        Object {
          "flexBasis": 40,
        }
      }
    >
      <EuiBadge
        color="secondary"
        style={
          Object {
            "display": "block",
          }
        }
      >
        Up
      </EuiBadge>
    </EuiFlexItem>
    <EuiFlexItem>
      <styled.span>
        <EuiToolTip
          content={
            <EuiText
              color="ghost"
              size="xs"
            >
              Thu May 09 2019 10:15:11 GMT-0400
            </EuiText>
          }
          delay="regular"
          position="top"
        >
          <EuiText
            className="eui-textNoWrap"
            color="subdued"
            size="xs"
          >
            a few seconds ago
          </EuiText>
        </EuiToolTip>
      </styled.span>
    </EuiFlexItem>
  </Styled(EuiFlexGroup)>
  <EuiSpacer
    size="xs"
  />
  <EuiText
    size="xs"
  >
    in 0/0 Location
  </EuiText>
</div>
`;

exports[`MonitorListStatusColumn will display location status 1`] = `
<div>
  <Styled(EuiFlexGroup)
    alignItems="center"
    gutterSize="none"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      grow={false}
      style={
        Object {
          "flexBasis": 40,
        }
      }
    >
      <EuiBadge
        color="secondary"
        style={
          Object {
            "display": "block",
          }
        }
      >
        Up
      </EuiBadge>
    </EuiFlexItem>
    <EuiFlexItem>
      <styled.span>
        <EuiToolTip
          content={
            <EuiText
              color="ghost"
              size="xs"
            >
              Thu May 09 2019 10:15:11 GMT-0400
            </EuiText>
          }
          delay="regular"
          position="top"
        >
          <EuiText
            className="eui-textNoWrap"
            color="subdued"
            size="xs"
          >
            a few seconds ago
          </EuiText>
        </EuiToolTip>
      </styled.span>
    </EuiFlexItem>
  </Styled(EuiFlexGroup)>
  <EuiSpacer
    size="xs"
  />
  <EuiText
    size="xs"
  >
    in 1/3 Locations
  </EuiText>
</div>
`;

exports[`MonitorListStatusColumn will render display location status 1`] = `
.c1 {
  padding-left: 5px;
}

@media (max-width:574px) {
  .c0 {
    min-width: 230px;
  }
}

<div>
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow c0"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      style="flex-basis:40px"
    >
      <span
        class="euiBadge euiBadge--iconLeft"
        style="background-color:#6dccb1;color:#000;display:block"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            Up
          </span>
        </span>
      </span>
    </div>
    <div
      class="euiFlexItem"
    >
      <span
        class="c1"
      >
        <span
          class="euiToolTipAnchor"
        >
          <div
            class="euiText euiText--extraSmall eui-textNoWrap"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              a few seconds ago
            </div>
          </div>
        </span>
      </span>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--xs"
  />
  <div
    class="euiText euiText--extraSmall"
  >
    in 1/3 Locations
  </div>
</div>
`;
